changes to index html and landing page

--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,7 +1,86 @@
-<div class="jumbotron">
-    <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a paragraph</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+<div id="index-banner" class="parallax-container">
+    <div class="section">
+        <div class="container">
+            <h1 class="header center">RBS Remembers</h1>
+            <div class="row center">
+                <h5 class="header">About 5000+ employees have worked in the RBS account</h5>
+            </div>
+            <div class="row center">
+                <a href="info.html" target="_blank" class="btn-large">GET STARTED</a>
+            </div>
+        </div>
+    </div>
+    <div class="parallax">
+        <img src="images/team.png">
+    </div>
+</div>
+<div class="container">
+    <div class="section">
+        <div class="row content">
+            <div class="col s12 m4">
+                <img src="images/emp2.png">
+                <h5>Development</h5>
+            </div>
+            <div class="col s12 m4">
+                <img src="images/emp-w1.png">
+                <h5>Development</h5>
+            </div>
+            <div class="col s12 m4">
+                <img src="images/emp1.png">
+                <h5>Development</h5>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="section">
+        <div class="row content1">
+            <div class="col s12">
+                <h5>Employee1</h5>
+                <p>He was one of the member in RBS project. He worked in UI and was from the starting of the project abd worked on various releases.</p>
+                <img src="images/emp.png">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="parallax-container">
+    <div class="section">
+        <div class="container">
+            <h1 class="header center">RBS Remembers</h1>
+            <div class="row center">
+                <h5 class="header">About 5000+ employees have worked in the RBS account</h5>
+            </div>
+            <div class="row center">
+                <a href="#" class="btn-large">GET STARTED</a>
+            </div>
+        </div>
+    </div>
+    <div class="parallax">
+        <img src="images/work.png">
+    </div>
+</div>
+<div class="container third-block">
+    <div class="row">
+        <div class="col s12 m4">
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="images/team1.png">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                    <p><a href="#">This is a link</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m4">
+            <h5>Development</h5>
+        </div>
+        <div class="col s12 m4">
+            <h5>Development</h5>
+        </div>
     </div>
 </div>
